--- a/public/about.html
+++ b/public/about.html
@@ -11,15 +11,15 @@
 <nav>
 <ul>
 <li><a href="https://os.mercode.org"><i class="fa fa-linux" aria-hidden="true"></i> Linux</a></li>
-<li><a href="about.pug"><i class="fa fa-users" aria-hidden="true"></i> About</a></li>
-<li><a href="projects.pug"><i class="fa fa-tasks" aria-hidden="true"></i> Projects</a></li>
-<li><a href="contact.pug"><i class="fa fa-envelope " aria-hidden="true"></i> Contact</a></li>
+<li><a href="about.html"><i class="fa fa-users" aria-hidden="true"></i> About</a></li>
+<li><a href="projects.html"><i class="fa fa-tasks" aria-hidden="true"></i> Projects</a></li>
+<li><a href="contact.html"><i class="fa fa-envelope " aria-hidden="true"></i> Contact</a></li>
 <li><a href="https://hub.mercode.org"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
-<li style="display: none"><a href="portal.pug">PARCEL BUGFIX</a></li>
+<li style="display: none"><a href="portal.html">PARCEL BUGFIX</a></li>
 <div class="dropdown">
 <li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
 <div class="dropdown-content">
-<a href="./index.pug">English</a>
+<a href="./index.html">English</a>
 <a href="#tr/index.html">Türkçe</a>
 </div>
 </div>
