--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
 <nav>
 <ul>
 <li><a href="https://os.mercode.org"><i class="fa fa-linux" aria-hidden="true"></i> Linux</a></li>
-<li><a href="about.pug"><i class="fa fa-users" aria-hidden="true"></i> About</a></li>
-<li><a href="projects.pug"><i class="fa fa-tasks" aria-hidden="true"></i> Projects</a></li>
-<li><a href="contact.pug"><i class="fa fa-envelope " aria-hidden="true"></i> Contact</a></li>
+<li><a href="about.html"><i class="fa fa-users" aria-hidden="true"></i> About</a></li>
+<li><a href="projects.html"><i class="fa fa-tasks" aria-hidden="true"></i> Projects</a></li>
+<li><a href="contact.html"><i class="fa fa-envelope " aria-hidden="true"></i> Contact</a></li>
 <li><a href="https://hub.mercode.org"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
-<li style="display: none"><a href="portal.pug">PARCEL BUGFIX</a></li>
+<li style="display: none"><a href="portal.html">PARCEL BUGFIX</a></li>
 <div class="dropdown">
 <li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
 <div class="dropdown-content">
-<a href="./index.pug">English</a>
+<a href="./index.html">English</a>
 <a href="#tr/index.html">Türkçe</a>
 </div>
 </div>
@@ -32,7 +32,7 @@
 <a href="https://www.patreon.com/mercode" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a>
 <br><p style="color: #afafaf">Made with &lt;3 &nbsp;&nbsp; by The Mercode Community.</p><div class="footer">
 <div class="footer-copyright">
-<p>Copyleft 2019 Mercode</p>
+<p>Copyleft 2019 Mercode - GPLv3</p>
 </div>
 <div class="footer-sosyal-ikon">
 <div class="footer-sosyal-ikon">
