Added tr language and updated stuff

--- a/public/contact.html
+++ b/public/contact.html
@@ -20,13 +20,13 @@
 <li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
 <div class="dropdown-content">
 <a href="./index.html">English</a>
-<a href="#tr/index.html">Türkçe</a>
+<a href="tr/index.html">Türkçe</a>
 </div>
 </div>
 </ul>
 </nav>
 <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
-</header><form method="POST" action="https://formspree.io/tanakinci2002@gmail.com">
+</header><form method="POST" action="https://formspree.io/tansiretakinci@yandex.com">
 <div class="txtb">
 <label><span>Name</span>
 <input type="text" name="name" placeholder="Write your name (required)"></label>
@@ -52,7 +52,7 @@
 <div class="footer-sosyal-ikon">
 <ul>
 <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://gitlab.com/mercode"><i class="fa fa-gitlab" aria-hidden="true"></i></a></li>
+<li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
 <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>
