--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
 <div class="dropdown-content">
 <a href="./index.html">English</a>
-<a href="#tr/index.html">Türkçe</a>
+<a href="tr/index.html">Türkçe</a>
 </div>
 </div>
 </ul>
@@ -38,7 +38,7 @@
 <div class="footer-sosyal-ikon">
 <ul>
 <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://gitlab.com/mercode"><i class="fa fa-gitlab" aria-hidden="true"></i></a></li>
+<li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
 <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>
