--- a/public/tr/tor.html
+++ b/public/tr/tor.html
@@ -1,32 +1,32 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
-<title>Mercode</title><link rel="stylesheet" type="text/css" href="css/stiller.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
-<link rel="stylesheet" href="css/main.css">
+<title>Mercode</title><link rel="stylesheet" type="text/css" href="css/stiller.css"><link rel="shortcut icon" type="image/png" href="../assets/icon.png">
+<link rel="stylesheet" href="../css/main.css">
 <script src="./js/main.js"></script></head><body><header>
 <div>
-<div class="logo animated bounce"><a href="https://mercode.org/"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-<div class="logo"><a href="https://mercode.org/"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+<div class="logo animated bounce"><a href="https://mercode.org/"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+<div class="logo"><a href="https://mercode.org/"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
 </div>
 <nav>
 <ul>
 <li><a href="https://os.mercode.org"><i class="fa fa-linux" aria-hidden="true"></i> Linux</a></li>
-<li><a href="about.html"><i class="fa fa-users" aria-hidden="true"></i> About</a></li>
-<li><a href="projects.html"><i class="fa fa-tasks" aria-hidden="true"></i> Projects</a></li>
-<li><a href="contact.html"><i class="fa fa-envelope " aria-hidden="true"></i> Contact</a></li>
-<li><a href="https://hub.mercode.org"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
+<li><a href="about.html"><i class="fa fa-users" aria-hidden="true"></i> Hakkımızda</a></li>
+<li><a href="projects.html"><i class="fa fa-tasks" aria-hidden="true"></i> Projeler</a></li>
+<li><a href="contact.html"><i class="fa fa-envelope " aria-hidden="true"></i> İletişim</a></li>
+<li><a href="https://hub.mercode.org"><i class="fa fa-sign-in" aria-hidden="true"></i> Giriş</a></li>
 <li style="display: none"><a href="portal.html">PARCEL BUGFIX</a></li>
 <div class="dropdown">
-<li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
+<li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> Türkçe <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
 <div class="dropdown-content">
-<a href="./index.html">English</a>
-<a href="tr/index.html">Türkçe</a>
+<a href="../index.html">English</a>
+<a href="./index.html">Türkçe</a>
 </div>
 </div>
 </ul>
 </nav>
 <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
 </header><div class="hos">Install Tor</div>
-<h3>Install Tor and defend yourself against tracking and surveillance. Circumvent censorship of authoritarian regimes.</h3>
+<h3>İzlenme ve gözetimden kurtulmak için Tor indirin. Otoriter rejimlerin sansüründen kurtulun.</h3>
 <a href="https://mercode.org/nextcloud/index.php/s/AyjdbeTrMpnmFzb " class="button"><i class="fa fa-windows" aria-hidden="true"></i>  Windows (sic)</a>
 <a href="https://mercode.org/nextcloud/index.php/s/L745myzwdzarj2n " class="button"><i class="fa fa-linux" aria-hidden="true"></i>  Linux (sic)</a>
 <a href="https://mercode.org/nextcloud/index.php/s/bT4GQg2nSM8Yndo " class="button"><i class="fa fa-apple" aria-hidden="true"></i>  Apple (sic)</a><div class="footer">
