Added donation pop-up and fixed several bugs.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <meta charset="utf-8">
 <title>Mercode</title><link rel="stylesheet" type="text/css" href="css/indexarkaplan.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
-<script src="./js/main.js"></script></head><body><header>
+<script src="./js/main.js"></script>
+<script src="./js/jquery-3.3.1.js"></script></head><body><header>
 <div>
 <div class="logo animated bounce"><a href="https://mercode.org/"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
 <div class="logo"><a href="https://mercode.org/"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
@@ -29,8 +30,8 @@
 <h3>Non-Profit Free Open Source Software/OS Foundation and Social Network for Developers Worldwide</h3>
 <a href="join.pug" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Join Us</a>
 <a href="https://hub.mercode.org/register" class="button animated pulse delay-1s"><i class="fa fa-sign-in" aria-hidden="true"></i>  Register</a>
-<a href="https://www.patreon.com/mercode" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a>
-<br><p style="color: #afafaf">Made with &lt;3 &nbsp;&nbsp; by The Mercode Community.</p><div class="footer">
+<a href="#popup3" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a>
+<br><p style="color: #afafaf">Made with &lt;3 &nbsp;&nbsp; by The Mercode Community.</p><div id="popup3" class="overlay"><div class="popup"><h2>Donate to Mercode</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="assets/donation.svg" alt="Make Donations to Mercode!"/></div><div class="paragraf1">If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).<br/></div><div class="butonalan"><a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a><br/><input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
 <p>Copyleft 2019 Mercode - GPLv3</p>
 </div>
@@ -38,7 +39,7 @@
 <div class="footer-sosyal-ikon">
 <ul>
 <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
+<li><a href="https://t.me/mercode"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>
