--- a/public/portal.html
+++ b/public/portal.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="css/body.css">
 <link rel="stylesheet" type="text/css" href="css/portal.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
-<script src="./js/main.js"></script></head><body><header class="portalheader">
+<script src="./js/main.js"></script>
+<script src="./js/jquery-3.3.1.js"></script></head><body><header class="portalheader">
 <div class="logo"><a href="https://hub.mercode.org/"><img src="./assets/hub.mercode.png" style="width:auto;height:20px;padding-top:10px;" alt="*hub.mercode*"></a></div>
 <nav>
 <ul>
