--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,8 @@
 <title>Mercode</title><link rel="stylesheet" type="text/css" href="css/stiller.css">
 <link rel="stylesheet" type="text/css" href="css/iletisimbody.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
-<script src="./js/main.js"></script></head><body><header>
+<script src="./js/main.js"></script>
+<script src="./js/jquery-3.3.1.js"></script></head><body><header>
 <div>
 <div class="logo animated bounce"><a href="https://mercode.org/"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
 <div class="logo"><a href="https://mercode.org/"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
@@ -52,7 +53,7 @@
 <div class="footer-sosyal-ikon">
 <ul>
 <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
+<li><a href="https://t.me/mercode"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>
