--- a/public/tr/index.html
+++ b/public/tr/index.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="../css/main.css">
 <script src="./js/main.js"></script></head><body><header>
 <div>
-<div class="logo animated bounce"><a href="https://mercode.org/"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-<div class="logo"><a href="https://mercode.org/"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+<div class="logo animated bounce"><a href="https://mercode.org/tr/index.html"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+<div class="logo"><a href="https://mercode.org/tr/index.html"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
 </div>
 <nav>
 <ul>
@@ -29,8 +29,8 @@
 <h3>Kar Amacı Gütmeyen Açık Kaynaklı Özgür Yazılım Organizasyonu/OS ve Sosyal Ağ.</h3>
 <a href="join.pug" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Bize Katıl</a>
 <a href="https://hub.mercode.org/register" class="button animated pulse delay-1s"><i class="fa fa-sign-in" aria-hidden="true"></i>  Kaydol</a>
-<a href="https://www.patreon.com/mercode" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Bağış Yap</a>
-<br><p style="color: #afafaf">Mercode Topluluğu tarafından &nbsp;&nbsp; &lt;3 ile yapıldı.</p><div class="footer">
+<a href="#popup3" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Bağış Yap</a>
+<br><p style="color: #afafaf">Mercode Topluluğu tarafından &nbsp;&nbsp; &lt;3 ile yapıldı.</p><div id="popup3" class="overlay"><div class="popup"><h2>Mercode'a Bağış Yap</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="../assets/donation.svg" alt="Mercode&amp;apos;a bağış yapın!"/></div><div class="paragraf1">Bu ekibin topluluğa daha çok katkı sağlaması, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için (yorucu bir günün ardından çok iyi geliyor) Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz.<br/></div><div class="butonalan"><a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a><br/><input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
 <p>Copyleft 2019 Mercode - GPLv3</p>
 </div>
@@ -38,7 +38,7 @@
 <div class="footer-sosyal-ikon">
 <ul>
 <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
+<li><a href="https://t.me/mercode"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>
