--- a/public/tr/merkur.html
+++ b/public/tr/merkur.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="../css/main.css">
 <script src="./js/main.js"></script></head><body><header>
 <div>
-<div class="logo animated bounce"><a href="https://mercode.org/"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-<div class="logo"><a href="https://mercode.org/"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+<div class="logo animated bounce"><a href="https://mercode.org/tr/index.html"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+<div class="logo"><a href="https://mercode.org/tr/index.html"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
 </div>
 <nav>
 <ul>
@@ -33,7 +33,7 @@
 <div class="footer-sosyal-ikon">
 <ul>
 <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-<li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
+<li><a href="https://t.me/mercode"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
 <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 </ul>
