--- a/public/main.html
+++ b/public/main.html
@@ -3,7 +3,11 @@
 <title>Mercode</title><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
 <script src="./js/main.js"></script>
-<script src="./js/jquery-3.3.1.js"></script></head><body><header>
+<script src="./js/jquery-3.3.1.js"></script><script src="./js/jquery-3.3.1.js"></script><script type="text/javascript">$(document).ready(function() {
+$('.menu-toggle').click(function() {
+$('nav').toggleClass('active')
+})
+})</script></head><body><header>
 <div>
 <div class="logo animated bounce"><a href="https://mercode.org/"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
 <div class="logo"><a href="https://mercode.org/"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
