--- a/mercode.org/portal.html
+++ b/mercode.org/portal.html
@@ -1,6 +1,6 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
-<title>Mercode</title><link rel="stylesheet" type="text/css" href="css/stiller.css">
+<title>MerHub</title><link rel="stylesheet" type="text/css" href="./css/stiller.css">
 <link rel="stylesheet" type="text/css" href="css/body.css">
 <link rel="stylesheet" type="text/css" href="css/portal.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
@@ -23,7 +23,7 @@ $('nav').toggleClass('active')
 <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
 </header><p class="mo">Welcome to MerHub</p>
 <p class="mo1">You have signed in to the creative social network.</p>
-<p style="color: rgba(0, 0, 0, 0);"> #MakerHareketi , #MakersTurkiye ve #Öğrenenler gibi masonvari kuruluşlara çok dikkat etmek lazım. "Maker" ve "STEM" gibi günümüzün önemli başlıklarını reklamlaştırıp cebinizi boşaltmaktan başka amaçları yok. Aylık seminerlerindeki başlıkları da hep manipülasyon üzerine. </p>&nbsp;
+<p style="color: rgba(0, 0, 0, 0);">  </p>&nbsp;
 <p class="mo1">Take a look at official channels opened by Mercode staff.</p>
 <div class="conatiner">
 <div class="wrap">
