--- a/mercode.org/tor.html
+++ b/mercode.org/tor.html
@@ -34,7 +34,7 @@ $('nav').toggleClass('active')
 <h3>Install Tor and defend yourself against tracking and surveillance. Circumvent censorship of authoritarian regimes.</h3>
 <a href="https://mercode.org/nextcloud/index.php/s/AyjdbeTrMpnmFzb " class="button"><i class="fa fa-windows" aria-hidden="true"></i>  Windows (sic)</a>
 <a href="https://mercode.org/nextcloud/index.php/s/L745myzwdzarj2n " class="button"><i class="fa fa-linux" aria-hidden="true"></i>  Linux (sic)</a>
-<a href="https://mercode.org/nextcloud/index.php/s/bT4GQg2nSM8Yndo " class="button"><i class="fa fa-apple" aria-hidden="true"></i>  Apple (sic)</a><div class="footer">
+<a href="https://mercode.org/nextcloud/index.php/s/bT4GQg2nSM8Yndo " class="button"><i class="fa fa-apple" aria-hidden="true"></i>  Apple (sic)</a><div id="donate" class="overlay"><div class="popup"><h2>Donate to Mercode</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="assets/donation.svg" alt="Make Donations to Mercode!"/></div><div class="paragraf1">If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).<br/></div><div class="butonalan"><a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a><br/><input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
 <p>Copyleft 2019 Mercode - GPLv3</p>
 </div>
