--- a/mercode.org/tr/tor.html
+++ b/mercode.org/tr/tor.html
@@ -35,7 +35,7 @@ $('nav').toggleClass('active')
 <h3>İzlenme ve gözetimden kurtulmak için Tor indirin. Otoriter rejimlerin sansüründen kurtulun.</h3>
 <a href="https://mercode.org/nextcloud/index.php/s/AyjdbeTrMpnmFzb " class="button"><i class="fa fa-windows" aria-hidden="true"></i>  Windows (sic)</a>
 <a href="https://mercode.org/nextcloud/index.php/s/L745myzwdzarj2n " class="button"><i class="fa fa-linux" aria-hidden="true"></i>  Linux (sic)</a>
-<a href="https://mercode.org/nextcloud/index.php/s/bT4GQg2nSM8Yndo " class="button"><i class="fa fa-apple" aria-hidden="true"></i>  Apple (sic)</a><div class="footer">
+<a href="https://mercode.org/nextcloud/index.php/s/bT4GQg2nSM8Yndo " class="button"><i class="fa fa-apple" aria-hidden="true"></i>  Apple (sic)</a><div id="donate" class="overlay"><div class="popup"><h2>Mercode'a Bağış Yap</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="../assets/donation.svg" alt="Mercode&amp;apos;a bağış yapın!"/></div><div class="paragraf1">Bu ekibin topluluğa daha çok katkı sağlaması, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için (yorucu bir günün ardından çok iyi geliyor) Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz.<br/></div><div class="butonalan"><a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a><br/><input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
 <p>Copyleft 2019 Mercode - GPLv3</p>
 </div>
