--- a/mercode.org/tr/join.html
+++ b/mercode.org/tr/join.html
@@ -1,6 +1,7 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
-<title>Mercode</title><link rel="stylesheet" type="text/css" href="../css/stiller.css"><link rel="shortcut icon" type="image/png" href="../assets/icon.png">
+<title>Mercode</title><link rel="stylesheet" type="text/css" href="../css/stiller.css">
+<link rel="stylesheet" type="text/css" href="../css/iletisimbody.css"><link rel="shortcut icon" type="image/png" href="../assets/icon.png">
 <link rel="stylesheet" href="../css/main.css">
 <script src="../js/main.js"></script>
 <script src="../js/jquery-3.3.1.js"></script><script src="../js/jquery-3.3.1.js"></script><script type="text/javascript">$(document).ready(function() {
@@ -10,8 +11,8 @@ $('nav').toggleClass('active')
 })
 </script></head><body><header>
 <div>
-<div class="logo animated bounce"><a href="https://mercode.org/tr/index.html"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-<div class="logo"><a href="https://mercode.org/tr/index.html"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+<div class="logo animated bounce"><a href="index.html"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+<div class="logo"><a href="index.html"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
 </div>
 <nav>
 <ul>
