--- a/mercode.org/merkur.html
+++ b/mercode.org/merkur.html
@@ -9,8 +9,8 @@ $('nav').toggleClass('active')
 })
 })</script></head><body><header>
 <div>
-<div class="logo animated bounce"><a href="https://mercode.org/"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-<div class="logo"><a href="https://mercode.org/"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+<div class="logo animated bounce"><a href="index.html"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+<div class="logo"><a href="index.html"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
 </div>
 <nav>
 <ul>
