modernize the stylesheet.

--- a/mercode.org/index.html
+++ b/mercode.org/index.html
@@ -30,7 +30,7 @@ $('nav').toggleClass('active')
 </ul>
 </nav>
 <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
-</header><div class="hos">Mercode: <span class="ityped"></span></div><h3>Mercode is a Free Open Source Software Community aimed to create decentralized apps and Linux distros.</h3><a class="button animated pulse delay-1s" href="join.html"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Join Us</a><a class="button animated pulse delay-1s" href="https://hub.mercode.org/register"><i class="fa fa-sign-in" aria-hidden="true"></i>  Register</a><a class="button animated pulse delay-1s" href="#donate"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a><br/><p style="color: #afafaf">Made with &lt;3 &nbsp;&nbsp; by The Mercode Community.</p><script type="text/javascript" src="./js/ityped.js"></script><script type="text/javascript">window.ityped.init(document.querySelector('.ityped'),{
+</header><div class="hos">Mercode: <span class="ityped"></span></div><h3>Mercode is a Free Libre Open Source Community aimed to create decentralized apps and Linux distros.</h3><a class="button animated pulse delay-1s" href="join.html"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Join Us</a><a class="button animated pulse delay-1s" href="https://hub.mercode.org/register"><i class="fa fa-sign-in" aria-hidden="true"></i>  Register</a><a class="button animated pulse delay-1s" href="#donate"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a><br/><p style="color: #afafaf">Made with &lt;3 &nbsp;&nbsp; by The Mercode Community.</p><script type="text/javascript" src="./js/ityped.js"></script><script type="text/javascript">window.ityped.init(document.querySelector('.ityped'),{
 typeSpeed:  125,
 startDelay: 500,
 backDelay:  1200,
