--- a/mercode.org/games.html
+++ b/mercode.org/games.html
@@ -1,6 +1,6 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
-<title>Mercode</title><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
+<title>Mercode</title><link rel="stylesheet" type="text/css" href="css/cards.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
 <script src="./js/main.js"></script>
 <script src="./js/jquery-3.3.1.js"></script><script src="./js/jquery-3.3.1.js"></script><script type="text/javascript">$(document).ready(function() {
@@ -30,11 +30,22 @@ $('nav').toggleClass('active')
 </ul>
 </nav>
 <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
-</header><div class="hos">Install Tor</div>
-<h3>Install Tor and defend yourself against tracking and surveillance. Circumvent censorship of authoritarian regimes.</h3>
-<a href="https://mercode.org/nextcloud/index.php/s/AyjdbeTrMpnmFzb " class="button"><i class="fa fa-windows" aria-hidden="true"></i>  Windows (sic)</a>
-<a href="https://mercode.org/nextcloud/index.php/s/L745myzwdzarj2n " class="button"><i class="fa fa-linux" aria-hidden="true"></i>  Linux (sic)</a>
-<a href="https://mercode.org/nextcloud/index.php/s/bT4GQg2nSM8Yndo " class="button"><i class="fa fa-apple" aria-hidden="true"></i>  Apple (sic)</a><div id="donate" class="overlay"><div class="popup"><h2>Donate to Mercode</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="assets/donation.svg" alt="Make Donations to Mercode!"/></div><div class="paragraf1">If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).<br/></div><div class="butonalan"><a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Patreon</a><br/><input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
+</header><div class="conatiner">
+<div class="wrap">
+<div class="box one" onclick="myhref('https://hub.mercode.org/channel/linux');">
+<div class="date">
+</div>
+<h2>Distrocards</h2>
+<a class="button animated pulse delay-1s" href="games/distrocards/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Play</a>
+</div>
+<div class="box two" onclick="myhref('https://hub.mercode.org/channel/raspberrypi');">
+<div class="date">
+</div>
+<h2>Dwarfs2019</h2>
+<a class="button animated pulse delay-1s" href="games/dwarfs2019/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Play</a>
+</div>
+</div>
+</div><div id="donate" class="overlay"><div class="popup"><h2>Donate to Mercode</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="assets/donation.svg" alt="Make Donations to Mercode!"/></div><div class="paragraf1">If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).<br/></div><div class="butonalan"><a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Patreon</a><br/><input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
 <p>Copyleft 2019-2020 Mercode - GPLv3</p>
 </div>
