--- a/mercode.org/about.html
+++ b/mercode.org/about.html
@@ -1,4 +1,5 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta name="theme-color" content="#ff4d0d" />
 <meta charset="utf-8">
 <title>Mercode</title><link rel="stylesheet" type="text/css" href="css/hakkimizda.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
