--- a/mercode.org/contact.html
+++ b/mercode.org/contact.html
@@ -1,4 +1,5 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta name="theme-color" content="#ff4d0d" />
 <meta charset="utf-8">
 <title>Mercode</title><link rel="stylesheet" type="text/css" href="css/iletisimbody.css"><link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
 <link rel="stylesheet" href="css/main.css">
@@ -50,7 +51,7 @@ $('nav').toggleClass('active')
 <button class="formbutton" type="submit"><i class="fa fa-send" aria-hidden="true" style="font-size: 22px;"></i><a class="sendit"> Send It!</a></button>
 </form><div id="donate" class="overlay"><div class="popup"><h2>Donate to Mercode</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="assets/donation.svg" alt="Make Donations to Mercode!"/></div><div class="paragraf1">If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).<br/></div><div class="butonalan"><a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Patreon</a><br/><input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
-<p>Copyleft 2019-2020 Mercode - GPLv3</p>
+<p>Copyleft 2019-2020 Mercode - AGPLv3</p>
 </div>
 <div class="footer-sosyal-ikon">
 <div class="footer-sosyal-ikon">
