--- a/mercode.org/tr/games.html
+++ b/mercode.org/tr/games.html
@@ -1,7 +1,6 @@
 <!doctype html><head><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta charset="utf-8">
-<title>Mercode</title><link rel="stylesheet" type="text/css" href="../css/stiller.css">
-<link rel="stylesheet" type="text/css" href="../css/iletisimbody.css"><link rel="shortcut icon" type="image/png" href="../assets/icon.png">
+<title>Mercode</title><link rel="stylesheet" type="text/css" href="../css/cards.css"><link rel="shortcut icon" type="image/png" href="../assets/icon.png">
 <link rel="stylesheet" href="../css/main.css">
 <script src="../js/main.js"></script>
 <script src="../js/jquery-3.3.1.js"></script><script src="../js/jquery-3.3.1.js"></script><script type="text/javascript">$(document).ready(function() {
@@ -32,25 +31,22 @@ $('nav').toggleClass('active')
 </ul>
 </nav>
 <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
-</header><form method="POST" action="https://formspree.io/tansiretakinci@yandex.com">
-<div class="txtb">
-<label><span>İsim</span>
-<input required type="text" name="name" placeholder="İsminizi yazın (gerekli)"></label>
+</header><div class="conatiner">
+<div class="wrap">
+<div class="box one">
+<div class="date">
 </div>
-<div class="txtb">
-<label><span>E-posta</span>
-<input required type="email" name="replyto" placeholder="E-postanızı yazın (gerekli)"></label>
+<h2>Distrocards</h2>
+<a class="button animated pulse delay-1s" href="../games/distrocards/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Oyna</a>
 </div>
-<div class="txtb">
-<label><span>Telefon</span>
-<input required type="number" name="phone" placeholder="Telefon numaranızı yazın (isteğe bağlı)"></label>
+<div class="box two">
+<div class="date">
 </div>
-<div class="txtb">
-<label><span>Message</span>
-<textarea name="message" placeholder="Şimdi sadede gelelim."></textarea></label>
+<h2>Dwarfs2019</h2>
+<a class="button animated pulse delay-1s" href="../games/dwarfs2019/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Oyna</a>
 </div>
-<button class="formbutton" type="submit"><i class="fa fa-send" aria-hidden="true" style="font-size: 22px;"></i><a class="sendit"> Yolla gitsin!</a></button>
-</form><div id="donate" class="overlay"><div class="popup"><h2>Mercode'a Bağış Yap</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="../assets/donation.svg" alt="Mercode&amp;apos;a bağış yapın!"/></div><div class="paragraf1">Bu ekibin topluluğa daha çok katkı sağlaması, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için (yorucu bir günün ardından çok iyi geliyor) Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz.<br/></div><div class="butonalan"><a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Patreon</a><br/><input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
+</div>
+</div><div id="donate" class="overlay"><div class="popup"><h2>Mercode'a Bağış Yap</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="../assets/donation.svg" alt="Mercode&amp;apos;a bağış yapın!"/></div><div class="paragraf1">Bu ekibin topluluğa daha çok katkı sağlaması, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için (yorucu bir günün ardından çok iyi geliyor) Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz.<br/></div><div class="butonalan"><a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Patreon</a><br/><input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
 <p>Copyleft 2019-2020 Mercode - GPLv3</p>
 </div>
