--- a/mercode.org/tr/index.html
+++ b/mercode.org/tr/index.html
@@ -39,7 +39,7 @@ cursorChar: ".",
 strings : ['Özgürlük','Gizlilik','Güvenlik', 'Birlik']
 })</script><div id="donate" class="overlay"><div class="popup"><h2>Mercode'a Bağış Yap</h2><a class="close" href="#">&times;</a><div class="content"><div class="minialan1"><img class="svg" src="../assets/donation.svg" alt="Mercode&amp;apos;a bağış yapın!"/></div><div class="paragraf1">Bu ekibin topluluğa daha çok katkı sağlaması, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için (yorucu bir günün ardından çok iyi geliyor) Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz.<br/></div><div class="butonalan"><a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Patreon</a><br/><input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput"><br/><a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a></div></div></div></div><div class="footer">
 <div class="footer-copyright">
-<p>Copyleft 2019 Mercode - GPLv3</p>
+<p>Copyleft 2019-2020 Mercode - GPLv3</p>
 </div>
 <div class="footer-sosyal-ikon">
 <div class="footer-sosyal-ikon">
