add new flappux gif

--- a/mercode.org/games.html
+++ b/mercode.org/games.html
@@ -48,7 +48,7 @@ $('nav').toggleClass('active')
 <div class="box three">
 <div class="date">
 </div>
-<h2>Dwarfs2019</h2>
+<h2>Flappux</h2>
 <a class="button animated pulse delay-1s" href="games/flappux/index.html"><i class="fa fa-gamepad" aria-hidden="true"></i>  Play</a>
 </div>
 </div>
